ingress/demo.yml
#Ingress: egy controller, ami arra hivatott, hogy fogadja kivulrol a kliensek felol erkezo 
#kereseket es kepes a megfelelo kubernetes service fele tovabbitani azokat. A korabban tanult
#kontrollerek (deployment/svc/rs) mind-mind beepitett kubernetes kontrollerek, az ingress vi-
#szont egy kulso szolgaltatas, melyet kulon telepiteni kell. Tobb szolg.-totol is beszerezheto
#Az, hogy melyiket valasszuk, teljesen kornyezetfuggo. Minikube azonban egyet biztosit:
#minikube addons list - paranccsal lekerheto a tobbi kiegeszitovel egyuttesen. Aktivalasa a 
#minikube addons enable ingress - paranccsal tortenik. A minikube-os ingress controller-t egy-
#ebkent a google cloud biztositja(2 van neki hivatalosan), ami kozul az egyik egy nginx rever
#se proxy-t ad (gcp-google cloud platform). 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache2
spec:
  replicas: 3
  selector:
    matchLabels:
      type: public
      service: apache2
  template:
    metadata:
      labels:
        type: public
        service: apache2
        func: web_content_providing
    spec:
      containers:
      - name: apache2
        image: httpd:2.4.41
---

apiVersion: v1
kind: Service
metadata:
  name: apache2
spec:
#Az elozo reszek eseteben a szerviz tipusa Nodeport volt, vagyis engedelyezte az osszes port
#kivulrol valo elereset. Ingress eroforras hasznalata eseten ez tobbe nem csak felesleges, de
#potencialis veszelyforras is lehet!!! Nincs megadva semmi, vagyis a default lesz ervenyben, 
#ami a ClusterIP es azt teszi lehetove, h csak belul a service tudja elerni a kulonbozo por-
#tokon futo alkalmazasokat. Ingress-nek pont eleg a csak 80 es a 443-as port elerese.
#  type: NodePort
  ports:
  - port: 80
  selector:
    type: public
    service: apache2

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache2-db
spec:
  selector:
    matchLabels:
      type: db
      service: apache2
  template:
    metadata:
      labels:
        type: db
        service: apache2
    spec:
      containers:
      - name: apache2-db
        image: mongo:3.6

---

apiVersion: v1
kind: Service
metadata:
  name: apache2-db
spec:
  ports:
  - port: 27017
  selector:
    type: db
    service: apache2
