ingress/demo-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: hello-vilag.info
    http:
      paths:
      - path: /demo
        backend:
          serviceName: apache2
          servicePort: 80
