ingress/demo2.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo2-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
#  - host: hello-vilag.info
  - http:
      paths:
      - path: /
        backend:
          serviceName: apache2-v2
          servicePort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache2-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      type: public-v2
      service: apache2-v2
  template:
    metadata:
      labels:
        type: public-v2
        service: apache2-v2
        func: web_content_providing
    spec:
      containers:
      - name: apache2-v2
        image: httpd:2.4.43
---

apiVersion: v1
kind: Service
metadata:
  name: apache2-v2
spec:
  ports:
  - port: 80
  selector:
    type: public-v2
    service: apache2-v2
